--- a/demos/nav-corner.html
+++ b/demos/nav-corner.html
@@ -8,6 +8,6 @@
 <div id="painter">
 </div>
 <button onclick="nav()">nav</button>
-<script src="nav-corner.js"></script>
+<script src="dist/nav-corner.js"></script>
 </body>
 </html>
